# openacme

./: README.md  pyproject.toml
openacme/: __init__.py  acme.py  icd10.py
openacme/generate_embeddings/: __init__.py  generate_embeddings.py  map_definitions.py
openacme/icd10/: __init__.py  generate_embeddings.py  icd10.py  map_definitions.py
tests/: test_icd10.py
