[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openacme"
dynamic = ["version"]
description = "ICD-10 ACME decision tables for underlying cause of death assessment"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Benjamin M. Gyori, Northeastern University", email = "b.gyori@northeastern.edu"}
]
keywords = ["icd10", "acme", "cause-of-death", "ucod", "medical-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "networkx",
    "tqdm",
    "beautifulsoup4",
    "pystow",
    "lxml",
]

[project.optional-dependencies]
embeddings = [
    "numpy",
    "sentence-transformers",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/gyorilab/openacme"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["openacme*"]

[tool.setuptools.dynamic]
version = {attr = "openacme.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
